config jwt auth to user access and refactory routes
