# request/user_request_login.go
@@ -1,0 +1,6 @@
+package request
+
+type UserRequestLogin struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
