# response/user_response_login.go
@@ -1,0 +1,8 @@
+package response
+
+type UserResponseLogin struct {
+	ID       uint
+	Name     string
+	Email    string `gorm:"unique"`
+	Password string
+}
